--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,4 @@
-<div class="expanded row">
+<!-- <div class="expanded row">
   <div class="row">
     <div class="medium-4 columns">
       <h3>Heading</h3>
@@ -22,4 +22,7 @@
       <a href="#" role="button" class="button">View details</a>
     </div>
   </div>
-</div>
+</div> -->
+
+
+
