Added simple home view list of polls.

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -23,6 +23,11 @@
     </div>
   </div>
 </div> -->
+<div ng-controller="HomeCtrl">
+  <div ng-repeat="poll in polls" class="callout small">
+    <p>{{ poll.text }}</p>
+  </div>
+</div>
 
 
 
