--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -9,8 +9,8 @@
     <div class="top-bar-left">
       <ul class="vertical medium-horizontal menu">
         <li><a href="/" ng-class="{ active: isActive('/')}">Home</a></li>
-        <li><a href="/create" ng-class="{ active: isActive('/create')}">Create</a></li>
-        <li><a href="/me/polls" ng-class="{ active: isActive('/me/polls')}">My Polls</a></li>
+        <li ng-if="isAuthenticated()"><a href="/create" ng-class="{ active: isActive('/create')}">Create</a></li>
+        <li ng-if="isAuthenticated()"><a href="/me/polls" ng-class="{ active: isActive('/me/polls')}">My Polls</a></li>
       </ul>
     </div>
     <div ng-if="isAuthenticated()" class="top-bar-right">
