--- a/public/partials/editPoll.html
+++ b/public/partials/editPoll.html
@@ -1,14 +1,17 @@
 <div ng-controller="EditPollCtrl" class="container">
     <label for="pollText">Poll title</label>
-    <input type="text" name="pollText" value="poll.text" ng-model="poll.text">
+    <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
+    <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
     
     <label>Poll options</label>
     <div ng-if="poll.owner === profile._id">
         <ul>
             <li ng-repeat="option in poll.options track by $index">
-                <input type="text" value="{{option.text}}" ng-model="poll.options[$index].text" placeholder="Enter your option here.">
+                <input type="text" value="{{option.text}}" ng-model="poll.options[$index].text" placeholder="Enter your option here." aria-describedby="helpBlockPollOptions">
             </li>
         </ul>
+        <p id="helpBlockPollOptions" class="help-block">{{ errors.options.message }}</p>
+
         <button ng-click="addOption()" class="button secondary">Add option</button>
 
         <div class="button-group">
