--- a/public/partials/editPoll.html
+++ b/public/partials/editPoll.html
@@ -1,10 +1,10 @@
 <div ng-controller="EditPollCtrl" class="container">
-    <label for="pollText">Poll title</label>
-    <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
-    <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
-    
-    <label>Poll options</label>
     <div ng-if="poll.owner === profile._id">
+        <label for="pollText">Poll title</label>
+        <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
+        <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
+        
+        <label>Poll options</label>
         <ul>
             <li ng-repeat="option in poll.options track by $index">
                 <input type="text" value="{{option.text}}" ng-model="poll.options[$index].text" placeholder="Enter your option here." aria-describedby="helpBlockPollOptions">
@@ -20,8 +20,9 @@
         </div>
     </div>
 
-    <div ng-if="poll.owner !== profile._id">
+    <div ng-if="poll._id && (poll.owner !== profile._id)">
         <h1>You cannot edit this poll.</h1>
+        }
     </div>
 </div>
 </div>
