Add back button to edit mode, for going back to the poll view.

--- a/public/partials/editPoll.html
+++ b/public/partials/editPoll.html
@@ -17,12 +17,12 @@
         <div class="button-group">
             <button ng-click="saveUpdates()" class="button primary">Save</button>
             <button ng-click="deletePoll()" class="button alert">Delete</button>
+            <a href="/poll/{{poll._id}}" class="button secondary">Back</a>
         </div>
     </div>
 
     <div ng-if="poll._id && (poll.owner !== profile._id)">
         <h1>You cannot edit this poll.</h1>
-        }
     </div>
 </div>
 </div>
