--- a/public/partials/viewPoll.html
+++ b/public/partials/viewPoll.html
@@ -2,13 +2,13 @@
 		<h1>{{poll.text}}</h1>
 		<ul>
 			<li ng-repeat="option in poll.options">
-				<input type="radio" name="vote" value="{{option.text}}" ng-model="choice" ng-if="!voted">
+				<input type="radio" name="vote" value="{{option.text}}" ng-model="data.choice" ng-show="!voted">
 				<p>{{option.text}} ({{option.votes.length}} votes)</p>
 			</li>
 		</ul>
 		
 		<div class="button-group">
-			<button ng-if="poll._id && !voted" class="button float-left" ng-click="vote(choice)">Vote</button>
+			<button ng-if="poll._id && !voted" class="button float-left" ng-click="vote(data.choice)">Vote</button>
 			<a ng-if="poll.owner === profile._id" class="button float-left" href="/poll/edit/{{poll._id}}">Edit</a>
 			<button ng-if="poll.owner === profile._id" ng-click="deletePoll()" class="button alert float-left">Delete</button>
 		</div>
