--- a/public/partials/editPoll.html
+++ b/public/partials/editPoll.html
@@ -1,5 +1,6 @@
 <div ng-controller="EditPollCtrl" class="container">
     <div ng-if="poll.owner === profile._id">
+        <h1>Edit Poll</h1>
         <label for="pollText">Poll title</label>
         <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
         <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
