--- a/public/partials/myPolls.html
+++ b/public/partials/myPolls.html
@@ -1,6 +1,7 @@
-<div ng-controller="PollsCtrl">
+<div ng-controller="PollsCtrl" class="container">
+	<h1>My Polls</h1>
 	<div ng-if="polls.length > 0">
-	    <div ng-repeat="poll in polls" class="callout small">
+	    <div ng-repeat="poll in polls" class="callout small primary">
 	        <a href="/poll/{{poll._id}}"><p>{{ poll.text }}</p></a> 
 	    </div>
     </div>
