--- a/public/partials/myVotes.html
+++ b/public/partials/myVotes.html
@@ -2,7 +2,7 @@
 	<h1>My Votes</h1>
 	<div ng-if="votes.length > 0">
 	    <div ng-repeat="vote in votes" class="callout small primary">
-	    	<h3><a href="{{baseUrl}}/poll/{{vote.poll._id}}">{{ vote.poll.text }} by {{ vote.poll.owner }}</a></h3>
+	    	<h3><a href="/poll/{{vote.poll._id}}">{{ vote.poll.text }} by {{ vote.poll.owner }}</a></h3>
 	        <p>{{ vote.choice }}</p>
 	    </div>
     </div>
