--- a/public/partials/editPoll.html
+++ b/public/partials/editPoll.html
@@ -1,29 +1,27 @@
 <div ng-controller="EditPollCtrl" class="container">
     <div ng-if="poll.owner === profile._id">
         <h1>Edit Poll</h1>
-        <label for="pollText">Poll title</label>
-        <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
-        <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
-        
-        <label>Poll options</label>
-        <ul>
-            <li ng-repeat="option in poll.options track by $index">
-                <input type="text" value="{{option.text}}" ng-model="poll.options[$index].text" placeholder="Enter your option here." aria-describedby="helpBlockPollOptions">
-            </li>
-        </ul>
-        <p id="helpBlockPollOptions" class="help-block">{{ errors.options.message }}</p>
-
-        <button ng-click="addOption()" class="button secondary">Add option</button>
-
-        <div class="button-group">
-            <button ng-click="saveUpdates()" class="button primary">Save</button>
-            <button ng-click="deletePoll()" class="button alert">Delete</button>
-            <a href="/poll/{{poll._id}}" class="button secondary">Back</a>
+        <div ng-hide="loading">
+            <label for="pollText">Poll title</label>
+            <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
+            <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
+            <label>Poll options</label>
+            <ul>
+                <li ng-repeat="option in poll.options track by $index">
+                    <input type="text" value="{{option.text}}" ng-model="poll.options[$index].text" placeholder="Enter your option here." aria-describedby="helpBlockPollOptions">
+                </li>
+            </ul>
+            <p id="helpBlockPollOptions" class="help-block">{{ errors.options.message }}</p>
+            <button ng-click="addOption()" class="button secondary">Add option</button>
+            <div class="button-group">
+                <button ng-click="saveUpdates()" class="button primary">Save</button>
+                <button ng-click="deletePoll()" class="button alert">Delete</button>
+                <a href="/poll/{{poll._id}}" class="button secondary">Back</a>
+            </div>
         </div>
+
+        <loading ng-show="loading"></loading>
     </div>
-
-
-
     <div ng-if="poll._id && (poll.owner !== profile._id)">
         <h1>You cannot edit this poll.</h1>
     </div>
