--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,9 +1,11 @@
 <div ng-controller="HomeCtrl" class="container">
-	<h1>Most recent polls</h1>
-  <div ng-repeat="poll in polls" class="callout small primary">
-    <a href="/poll/{{poll._id}}"><p>{{ poll.text }}</p></a>
-  </div>
+    <h1>Most recent polls</h1>
+    <div ng-hide="loading">
+        <div ng-repeat="poll in polls" class="callout small primary">
+            <a href="/poll/{{poll._id}}">
+                <p>{{ poll.text }}</p>
+            </a>
+        </div>
+    </div>
+    <loading ng-show="loading"></loading>
 </div>
-
-
-
