--- a/public/partials/myPolls.html
+++ b/public/partials/myPolls.html
@@ -1,12 +1,17 @@
 <div ng-controller="PollsCtrl" class="container">
-	<h1>My Polls</h1>
-	<div ng-if="polls.length > 0">
-	    <div ng-repeat="poll in polls" class="callout small primary">
-	        <a href="/poll/{{poll._id}}"><p>{{ poll.text }}</p></a> 
-	    </div>
-    </div>
+    <h1>My Polls</h1>
+    <div ng-if="polls.length > 0">
+        <div ng-hide="loading">
+            <div ng-repeat="poll in polls" class="callout small primary">
+                <a href="/poll/{{poll._id}}">
+                    <p>{{ poll.text }}</p>
+                </a>
+            </div>
+        </div>
 
-    <div ng-if="polls.length === 0">
-    	<h1>No polls yet.</h1>
-	</div>
+        <loading ng-show="loading"></loading>
+    </div>
+    <div ng-if="!loading && polls.length === 0">
+        <h1>No polls yet.</h1>
+    </div>
 </div>
