--- a/public/partials/viewPoll.html
+++ b/public/partials/viewPoll.html
@@ -1,16 +1,17 @@
 <div ng-controller="ViewPollCtrl" class="container">
-		<h1>Viewing poll {{poll.text}} by <a href="/user/{{pollCreator._id}}">{{pollCreator.name}}</a></h1>
-		<ul>
-			<li ng-repeat="option in poll.options">
-				<input type="radio" name="vote" value="{{option.text}}" ng-model="data.choice" ng-show="!voted">
-				<p>{{option.text}} ({{option.votes.length}} votes)</p>
-			</li>
-		</ul>
-		
-		<div class="button-group">
-			<button ng-if="poll._id && !voted" class="button float-left" ng-click="vote(data.choice)">Vote</button>
-			<a ng-if="poll.owner === profile._id" class="button float-left" href="/poll/edit/{{poll._id}}">Edit</a>
-			<button ng-if="poll.owner === profile._id" ng-click="deletePoll()" class="button alert float-left">Delete</button>
-		</div>
-	</div>
+    <div ng-hide="loading">
+        <h1>Viewing poll {{poll.text}} by <a href="/user/{{pollCreator._id}}">{{pollCreator.name}}</a></h1>
+        <ul>
+            <li ng-repeat="option in poll.options">
+                <input type="radio" name="vote" value="{{option.text}}" ng-model="data.choice" ng-show="!voted">
+                <p>{{option.text}} ({{option.votes.length}} votes)</p>
+            </li>
+        </ul>
+        <div class="button-group">
+            <button ng-if="poll._id && !voted" class="button float-left" ng-click="vote(data.choice)">Vote</button>
+            <a ng-if="poll.owner === profile._id" class="button float-left" href="/poll/edit/{{poll._id}}">Edit</a>
+            <button ng-if="poll.owner === profile._id" ng-click="deletePoll()" class="button alert float-left">Delete</button>
+        </div>
+    </div>
+    <loading ng-show="loading"></loading>
 </div>
