Update chart when user votes.

--- a/public/partials/viewPoll.html
+++ b/public/partials/viewPoll.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="poll__chart">
-                <canvas id="bar" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-legend="true"></canvas>
+                <canvas id="bar" class="chart chart-doughnut" chart-data="values" chart-labels="labels" chart-legend="true"></canvas>
             </div>
         </div>
         
