--- a/public/partials/editPoll.html
+++ b/public/partials/editPoll.html
@@ -4,14 +4,14 @@
         <div ng-hide="loading">
             <label for="pollText">Poll title</label>
             <input type="text" name="pollText" value="poll.text" ng-model="poll.text" aria-describedby="helpBlockPollName">
-            <span id="helpBlockPollName" class="help-block">{{ errors.name.message }}</span>
+            <span id="helpBlockPollName" class="help-block">{{ errors.name }}</span>
             <label>Poll options</label>
             <ul>
                 <li ng-repeat="option in poll.options track by $index">
                     <input type="text" value="{{option.text}}" ng-model="poll.options[$index].text" placeholder="Enter your option here." aria-describedby="helpBlockPollOptions">
                 </li>
             </ul>
-            <p id="helpBlockPollOptions" class="help-block">{{ errors.options.message }}</p>
+            <p id="helpBlockPollOptions" class="help-block">{{ errors.options }}</p>
             <button ng-click="addOption()" class="button secondary">Add option</button>
             <div class="button-group">
                 <button ng-click="saveUpdates()" class="button primary">Save</button>
