--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -43,7 +43,7 @@
 @include foundation-float-classes;
 @include foundation-flex-classes;
 
-
+@import "message";
 @import "header";
 @import "loading";
 @import "poll";
