--- a/public/partials/create.html
+++ b/public/partials/create.html
@@ -1,4 +1,6 @@
 <div ng-controller="CreatePollCtrl" class="container">
+    <div class="message message--success">{{messages.success}}</div>
+    <div class="message message--error">{{messages.error}}</div>
     <div ng-if="isAuthenticated()">
         <h1>Create Poll</h1>
         <form ng-submit="createPoll()">
