--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -1,4 +1,6 @@
 <div ng-controller="UserCtrl" class="container">
+	<div class="message message--success">{{messages.success}}</div>
+    <div class="message message--error">{{messages.error}}</div>
 	<h1>User</h1>
 	<h2>{{user.name}}</h2>
 
