Fix typo in home view.

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -11,7 +11,7 @@
     </div>
     <loading ng-show="loading"></loading>
 
-    <div ng-ig="!loading && polls.length === 0">
+    <div ng-if="!loading && polls.length === 0">
         <h2>No recent polls.</h2>
     </div>
 </div>
