Update view after poll deletion.

--- a/public/partials/viewPoll.html
+++ b/public/partials/viewPoll.html
@@ -2,7 +2,7 @@
     <div class="message message--success">{{messages.success}}</div>
     <div class="message message--error">{{messages.error}}</div>
     <div ng-hide="loading">
-        <div ng-if="!_.isEmpty(poll)">
+        <div ng-show="poll._id">
             <h1>Viewing poll {{poll.text}} by <a href="/user/{{pollCreator._id}}">{{pollCreator.name}}</a></h1>
             <div class="poll">
                 <div class="poll__options">
