--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 /**
  * Foundation for Sites by ZURB
  * Version 6.2.0
@@ -4186,10 +4187,21 @@ html {
   height: auto; }
 
 body {
-  margin: 0 0 50px; }
+  margin: 0 0 50px;
+  font-family: 'Roboto';
+  color: #2C3E50; }
 
 h1 {
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+  font-weight: 700;
+  font-family: inherit; }
+  h1:after {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: #2C3E50;
+    content: ''; }
 
 footer {
   padding: 0 1rem;
@@ -4207,6 +4219,9 @@ footer {
 .container {
   width: 70%;
   margin: 0 auto; }
+
+ul {
+  list-style-type: none; }
 
 .callout.alert {
   background-color: rgba(240, 80, 80, 0.2);
