--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,16 +1,17 @@
 <div ng-controller="HomeCtrl" class="container">
-	<div class="message message--success">{{messages.success}}</div>
-    <div class="message message--error">{{messages.error}}</div>
     <h1>Most recent polls</h1>
+    <div ng-show="messages.success" class="callout success message message--success">{{messages.success}}</div>
+    <div ng-show="messages.error" class="callout alert message message--error">{{messages.error}}</div>
     <div ng-hide="loading">
-        <div ng-repeat="poll in polls" class="callout small primary">
-            <a href="/poll/{{poll._id}}">
-                <p>{{ poll.text }}</p>
-            </a>
-        </div>
+        <ul>
+            <li ng-repeat="poll in polls" class="callout small primary">
+                <a href="/poll/{{poll._id}}">
+                    <p>{{ poll.text }}</p>
+                </a>
+            </li>
+        </ul>
     </div>
     <loading ng-show="loading"></loading>
-
     <div ng-if="!loading && polls.length === 0">
         <h2>No recent polls.</h2>
     </div>
