--- a/client/partials/myVotes.html
+++ b/client/partials/myVotes.html
@@ -1,7 +1,7 @@
 <div ng-controller="VotesCtrl" class="container">
-    <div class="message message--success">{{messages.success}}</div>
-    <div class="message message--error">{{messages.error}}</div>
     <h1>My Votes</h1>
+    <div ng-show="messages.success" class="callout success message message--success">{{messages.success}}</div>
+    <div ng-show="messages.error" class="callout alert message message--error">{{messages.error}}</div>
     <div ng-hide="loading">
         <div ng-if="votes.length > 0">
             <div ng-repeat="vote in votes" class="callout small primary">
@@ -12,6 +12,6 @@
     </div>
     <loading ng-show="loading"></loading>
     <div ng-if="!loading && votes.length === 0">
-        <h1>No votes yet.</h1>
+        <h2>No votes yet.</h2>
     </div>
 </div>
