--- a/client/partials/user.html
+++ b/client/partials/user.html
@@ -1,8 +1,7 @@
 <div ng-controller="UserCtrl" class="container">
 	<div class="message message--success">{{messages.success}}</div>
     <div class="message message--error">{{messages.error}}</div>
-	<h1>User</h1>
-	<h2>{{user.name}}</h2>
+	<h1>User &mdash; {{user.name}}</h1>
 
 	<h3>{{user.name}}'s polls</h3>
 	<ul>
@@ -10,7 +9,7 @@
 			<a href="/poll/{{poll._id}}">{{poll.text}}</a>
 		</li>
 	</ul>
-
+	<br><br>
 	<h3>{{user.name}}'s votes</h3>
 	<ul>
 		<li ng-repeat="vote in votes" class="callout small primary">
