--- a/client/partials/viewPoll.html
+++ b/client/partials/viewPoll.html
@@ -9,6 +9,7 @@
             <div ng-show="messages.success" class="callout success message message--success">{{messages.success}}</div>
             <div ng-show="messages.error" class="callout alert message message--error">{{messages.error}}</div>
             <div class="poll">
+                <span ng-if="choice">Your vote: {{choice}}</span>
                 <div class="poll__options">
                     <ul>
                         <li ng-repeat="option in poll.options">
