--- a/client/partials/myPolls.html
+++ b/client/partials/myPolls.html
@@ -1,6 +1,6 @@
 <div ng-controller="PollsCtrl" class="container">
     <h1>My Polls</h1>
-    <div ng-show="messages.success" class="callout success message message--success">{{messages.success}}</div>
+    <!-- <div ng-show="messages.success" class="callout success message message-success">{{messages.success}}</div> -->
     <div ng-show="messages.error" class="callout alert message message--error">{{messages.error}}</div>
     <div ng-hide="loading">
         <div ng-if="polls.length > 0">
