--- a/client/partials/profile.html
+++ b/client/partials/profile.html
@@ -49,10 +49,10 @@
     <h5>Linked Accounts</h5>
 
     <p>
-      <a href="#" ng-click="unlink('facebook')" ng-if="currentUser.facebook" class="text-danger">Unlink your Facebook account</a>
-      <a href="#" ng-click="link('facebook')" ng-if="!currentUser.facebook">Link your Facebook account</a>
+      <a href="#" ng-click="unlink('facebook')" ng-if="profile.facebook" class="text-danger">Unlink your Facebook account</a>
+      <a href="#" ng-click="link('facebook')" ng-if="!profile.facebook">Link your Facebook account</a>
     </p>
-    <p>
+    <!-- <p>
       <a href="#" ng-click="unlink('twitter')" ng-if="currentUser.twitter" class="text-danger">Unlink your Twitter account</a>
       <a href="#" ng-click="link('twitter')" ng-if="!currentUser.twitter">Link your Twitter account</a>
     </p>
@@ -63,7 +63,7 @@
     <p>
       <a href="#" ng-click="unlink('github')" ng-if="currentUser.github" class="text-danger">Unlink your Github account</a>
       <a href="#" ng-click="link('github')" ng-if="!currentUser.github">Link your Github account</a>
-    </p>
+    </p> -->
 
     <h5>Delete Account</h5>
 
