--- a/client/partials/signup.html
+++ b/client/partials/signup.html
@@ -1,6 +1,6 @@
 <div class="column row">
   <div class="row">
-    <div class="medium-8 medium-offset-2 columns">
+    <div class="medium-12 medium-offset-5 columns">
       <div ng-if="messages.error" role="alert" class="callout alert">
         <div ng-repeat="error in messages.error">{{error.msg}}</div>
       </div>
@@ -17,7 +17,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password" placeholder="Password" ng-model="user.password">
 
-        <p class="help-text">By signing up, you agree to the <a href="/">Terms of Service</a>.</p>
+        <!-- <p class="help-text">By signing up, you agree to the <a href="/">Terms of Service</a>.</p> -->
 
         <button type="submit" class="button">Create an account</button>
       </form>
@@ -26,9 +26,9 @@
 
       <div class="button-group">
         <button class="button facebook" ng-click="authenticate('facebook')">Sign in with Facebook</button>
-        <button class="button twitter" ng-click="authenticate('twitter')">Sign in with Twitter</button>
+ <!--        <button class="button twitter" ng-click="authenticate('twitter')">Sign in with Twitter</button>
         <button class="button google" ng-click="authenticate('google')">Sign in with Google</button>
-        <button class="button github" ng-click="authenticate('github')">Sign in with Github</button>
+        <button class="button github" ng-click="authenticate('github')">Sign in with Github</button> -->
       </div>
 
       <p>Already have an account? <a href="/login">Log in</a></p>
