Remove social authentication for now.

--- a/client/partials/profile.html
+++ b/client/partials/profile.html
@@ -46,12 +46,12 @@
       <button type="submit" class="success button">Change Password</button>
     </form>
 
-    <h5>Linked Accounts</h5>
+    <!-- <h5>Linked Accounts</h5>
 
     <p>
       <a href="#" ng-click="unlink('facebook')" ng-if="profile.facebook" class="text-danger">Unlink your Facebook account</a>
       <a href="#" ng-click="link('facebook')" ng-if="!profile.facebook">Link your Facebook account</a>
-    </p>
+    </p> -->
     <!-- <p>
       <a href="#" ng-click="unlink('twitter')" ng-if="currentUser.twitter" class="text-danger">Unlink your Twitter account</a>
       <a href="#" ng-click="link('twitter')" ng-if="!currentUser.twitter">Link your Twitter account</a>
