--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -19,14 +19,14 @@
         <button type="submit" class="button">Log in</button>
       </form>
 
-      <div class="hr-title"><span>or</span></div>
+      <!-- <div class="hr-title"><span>or</span></div>
 
       <div class="button-group">
         <button class="button facebook" ng-click="authenticate('facebook')">Sign in with Facebook</button>
-        <!-- <button class="button twitter" ng-click="authenticate('twitter')">Sign in with Twitter</button>
+        <button class="button twitter" ng-click="authenticate('twitter')">Sign in with Twitter</button>
         <button class="button google" ng-click="authenticate('google')">Sign in with Google</button>
-        <button class="button github" ng-click="authenticate('github')">Sign in with Github</button> -->
-      </div>
+        <button class="button github" ng-click="authenticate('github')">Sign in with Github</button>
+      </div> -->
 
       <p>Don't have an account? <a href="/signup">Sign up</a></p>
     </div>
