--- a/client/partials/signup.html
+++ b/client/partials/signup.html
@@ -1,6 +1,6 @@
 <div class="column row">
   <div class="row">
-    <div class="medium-12 medium-offset-5 columns">
+    <div class="medium-12 columns">
       <div ng-if="messages.error" role="alert" class="callout alert">
         <div ng-repeat="error in messages.error">{{error.msg}}</div>
       </div>
