--- a/client/partials/header.html
+++ b/client/partials/header.html
@@ -3,7 +3,7 @@
     <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
       <span class="menu-icon light" data-toggle></span>
     </span>
-    <a href="/">Voty</a>
+    <a href="/">Fanatsy Verdict</a>
   </div>
   <div id="responsive-menu">
     <div class="top-bar-left">
